--- a/preamble.tex
+++ b/preamble.tex
@@ -73,6 +73,20 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 
+\renewcommand{\algorithmicrequire}{\textbf{Kræver}}
+\renewcommand{\algorithmicensure}{\textbf{Sikrer}}
+\renewcommand{\algorithmicif}{\textbf{hvis}}
+\renewcommand{\algorithmicthen}{\textbf{s\aa}}
+\renewcommand{\algorithmicelse}{\textbf{ellers}}
+\renewcommand{\algorithmicfor}{\textbf{for}}
+\renewcommand{\algorithmicforall}{\textbf{for alle}}
+\renewcommand{\algorithmicdo}{\textbf{gør}}
+\renewcommand{\algorithmicwhile}{\textbf{mens}}
+\renewcommand{\algorithmicrepeat}{\textbf{gentag}}
+\renewcommand{\algorithmicuntil}{\textbf{indtil}}
+\renewcommand{\algorithmicreturn}{\textbf{returner}}
+\renewcommand{\algorithmiccomment}[1]{\hfill\textit{#1}}
+
 % Colors
 \definecolor{DeepSeaBlue}{HTML}{264653}
 \definecolor{TurquoiseGreen}{HTML}{2a9d8f}
@@ -178,6 +192,8 @@
 \newcounter{mycounter}
 \numberwithin{mycounter}{chapter}
 
+\newcounter{notecounter}
+\numberwithin{notecounter}{chapter}
 
 % Green Box
 \declaretheoremstyle[
@@ -242,6 +258,8 @@
 \declaretheorem[style=thmbluebox, name=Påstand, numberlike=mycounter]{claim}
 \declaretheorem[style=thmbluebox, name=Eksempel, numberlike=mycounter]{example}
 \declaretheorem[style=thmbluebox, name=Opgave, numberlike=mycounter]{exercise}
+\declaretheorem[style=thmbluebox, name=Note, numberlike=notecounter]{note}
+
 
 \let\oldproof\proof
 \let\endoldproof\endproof
