--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,8 @@
 
 \usepackage{float} % Tillader [H]
 
+\usepackage{wrapfig} % Alignment til figurer
+
 
 
 % Sæt sproget til dansk
@@ -249,7 +251,7 @@
     }
 ]{thmbluebox}
 
-\declaretheorem[style=thmredbox, name=Teorem, numberlike=mycounter]{theorem}
+\declaretheorem[style=thmredbox, name=Sætning, numberlike=mycounter]{theorem}
 \declaretheorem[style=thmgreenbox, name=Definition, numberlike=mycounter]{definition}
 \declaretheorem[style=thmredbox, name=Lemma, numberlike=mycounter]{lemma}
 \declaretheorem[style=thmredbox, name=Proposition, numberlike=mycounter]{proposition}
